Removed vertical-align middle from sortable to prevent jumping

--- a/addons/src/sortable/sortable.less
+++ b/addons/src/sortable/sortable.less
@@ -127,7 +127,6 @@
 .uk-sortable-handle:after {
     content: @sortable-handle-icon;
     font-family: FontAwesome;
-    vertical-align: middle;
 }
 
 
